# etrobocon2024-camera-system

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: kill_official_server.sh  run_official_server.sh
src/: __init__.py  __main__.py  camera_system.py  csv_to_json.py  detect_object.py  image_processor.py  official_interface.py  video_recorder.py
src/server/: README.md  flask_server.py
tests/: __init__.py  test_camera_system.py
